--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ db.connection={connectionString:'localhost:1234', userName:'user', password:'pas
 db.host=localhost
 db.port=1208
 
-
 app.name=My App
 app.description=Welcome to ${app.name}
+
+management.endpoints.web.exposure.include=*
